--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -48,6 +48,7 @@ $btnBackgroundColor:#3d3d3d;
 $secondaryBackground:#1b1b1b;
 $counterColor:#f0f0f0 ;
 $lineColor:#6b6b6b;
+$backgroundColorMenu:#bc232859;
 
 // Shadows
 
