--- a/views/sign_In_&_Create_Account.html
+++ b/views/sign_In_&_Create_Account.html
@@ -24,7 +24,6 @@
     <meta name="keywords" content=""/>
     <meta name="author" content="Diego Marin Mora & Break a Leg Company"/>
     <meta name="copyright" content="© [2023] [Diego Marin Mora & Break a Leg Company]"/>
-
 </head>
 <body>
 
@@ -266,24 +265,23 @@
                         <h3 class="tagLogIn">Log in</h3>
                     </label>
                     <legend>Welcome back</legend>
-                    <article class="formFloating">
+                    <fieldset class="formFloating">
                         <label class="email" for="floatingInput"></label>Email address
                         <input type="email" class="formControl input" id="floatingInput" placeholder="Email">
-                    </article>
-                    <article class="formFloating">
+                    </fieldset>
+                    <fieldset class="formFloating">
                         <label class="password" for="floatingInput"></label>Password
                         <input type="password" class="formControl input" id="floatingPassword" placeholder="Password">
-                    </article>
-                    <article class="ctaToSignIn">
-                        <input class="btnSignIn" type="Submit">
+                    </fieldset>
+                    <fieldset class="ctaToSignIn">
+                        <button type="button" class="btnSignIn" type="Submit">Submit</button>
                         <p>¿Do you have an account with us?</p>
-                    </article>
+                    </fieldset>
 
                     <label for="navBarMenu">
                         <p class="ctaFormCreateAccount">Create account</p>
                     </label>
                     <img src="../img/skull.svg" alt="" class="skullIcon">
-
                 </form>
 
                 <!-- CreateAccount -->
@@ -293,33 +291,32 @@
                         <h3 class="tagCreateAccount">Create Account</h3>
                     </label>
                     <legend>Create Account</legend>
-                    <article class="formFloating">
+                    <fieldset class="formFloating">
                         <label class="firstName" for="floatingInput"></label>First name
                         <input type="text" class="formControl input" id="floatingInput" placeholder="Enter your first name">
-                    </article>
-                    <article class="formFloating">
+                    </fieldset>
+                    <fieldset class="formFloating">
                         <label class="lastName" for="floatingInput"></label>Last name
                         <input type="text" class="formControl input" id="floatingInput" placeholder="Enter your last name">
-                    </article>
-                    <article class="formFloating">
+                    </fieldset>
+                    <fieldset class="formFloating">
                         <label class="email" for="floatingInput"></label>Email address
                         <input type="email" class="formControl input" id="floatingInput" placeholder="Enter your Email">
-                    </article>
-                    <article class="formFloating">
+                    </fieldset>
+                    <fieldset class="formFloating">
                         <label class="password"for="floatingPassword"></label>Password
                         <input type="password" class="formControl input" id="floatingPassword" placeholder="Enter your password">
-                    </article>
-                    <article class="ctaToCreateAccount">
-                        <input class="btnCreateAccount" type="Submit">
+                    </fieldset>
+                    <fieldset class="ctaToCreateAccount">
+                        <button type="button" class="btnCreateAccount" type="Submit">Submit</button>
                         <p>"Do you already have an account?"</p>
-                    </article>
+                    </fieldset>
                     <label  for="navBarMenu">
                         <p class="ctaFormLogIn"> Enter here </p>
                     </label>
                     <img src="../img/skull.svg" alt="" class="skullIcon">
 
                 </form>
-
             </article>
             <article class="bannerCreateAccount">
                 <img src="../img/background_Sunset.webp" alt="" class="background">
